--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ table {
   position: absolute;
   top: -20%;
   left: 0;
-  background: url("../img/hg.png") no-repeat;
+  background: url("../img/hg.webp") no-repeat;
   background-size: cover;
   opacity: .4;
 }
@@ -135,7 +135,7 @@ table {
   position: absolute;
   top: 50%;
   left: 0;
-  background: url("../img/mg.png") no-repeat;
+  background: url("../img/mg.webp") no-repeat;
   background-size: cover;
   opacity: 1;
 }
@@ -146,7 +146,7 @@ table {
   position: absolute;
   top: 70%;
   left: 0;
-  background: url("../img/vg.png") no-repeat;
+  background: url("../img/vg.webp") no-repeat;
   background-size: cover;
   opacity: 1;
 }
