--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,7 +26,7 @@
   position: absolute;
   top: -20%;
   left: 0;
-  background: url('../img/hg.png') no-repeat;
+  background: url('../img/hg.webp') no-repeat;
   background-size: cover;
   opacity: .4;
 }
@@ -37,7 +37,7 @@
   position: absolute;
   top: 50%;
   left: 0;
-  background: url('../img/mg.png') no-repeat;
+  background: url('../img/mg.webp') no-repeat;
   background-size: cover;
   opacity: 1;
 }
@@ -48,7 +48,7 @@
   position: absolute;
   top: 70%;
   left: 0;
-  background: url('../img/vg.png') no-repeat;
+  background: url('../img/vg.webp') no-repeat;
   background-size: cover;
   opacity: 1;
 }
