--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ table {
 .s1, .s2, .s3, .s4 {
   width: 100%;
   height: 100vh;
-  background: url("../img/bg_hero.png") no-repeat;
+  background: url("../img/bg_hero.webp") no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -639,19 +639,19 @@ table {
   display: flex;
   -ms-flex-preferred-size: 30%;
       flex-basis: 30%;
-  background: url("../img/01.jpg") no-repeat;
+  background: url("../img/01.webp") no-repeat;
   background-size: contain;
   background-position: center center;
   padding-bottom: 40%;
 }
 
 .image-s3 {
-  background: url("../img/02.jpg") no-repeat;
+  background: url("../img/02.webp") no-repeat;
   background-size: contain;
 }
 
 .image-s4 {
-  background: url("../img/03.jpg") no-repeat;
+  background: url("../img/03.webp") no-repeat;
   background-size: contain;
 }
 
