--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@
 .s1, .s2, .s3, .s4 {
   width: 100%;
   height: 100vh;
-  background: url('../img/bg_hero.png') no-repeat;
+  background: url('../img/bg_hero.webp') no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -420,18 +420,18 @@
 .image {
   display: flex;
   flex-basis: 30%;
-  background: url('../img/01.jpg') no-repeat;
+  background: url('../img/01.webp') no-repeat;
   background-size: contain;
   background-position: center center;
   padding-bottom: 40%;
 
   &-s3 {
-    background: url('../img/02.jpg') no-repeat;
+    background: url('../img/02.webp') no-repeat;
     background-size: contain;
   }
 
   &-s4 {
-    background: url('../img/03.jpg') no-repeat;
+    background: url('../img/03.webp') no-repeat;
     background-size: contain;
   }
 
