--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,10 @@ table {
   }
 }
 
-.s1, .s2, .s3, .s4 {
+.s1,
+.s2,
+.s3,
+.s4 {
   width: 100%;
   height: 100vh;
   background: url("../img/bg_hero.webp") no-repeat;
@@ -110,12 +113,13 @@ table {
 }
 
 .s2 {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(11, 29, 38, 0)), color-stop(61.38%, #0B1D26));
-  background: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0B1D26 61.38%);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(11, 29, 38, 0)), color-stop(61.38%, #0b1d26));
+  background: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%);
 }
 
-.s3, .s4 {
-  background: #0B1D26;
+.s3,
+.s4 {
+  background: #0b1d26;
 }
 
 .hg {
@@ -126,7 +130,7 @@ table {
   left: 0;
   background: url("../img/hg.webp") no-repeat;
   background-size: cover;
-  opacity: .4;
+  opacity: 0.4;
 }
 
 .mg {
@@ -201,8 +205,8 @@ table {
   width: 100%;
   height: 2px;
   background-color: white;
-  -webkit-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu__icon span:first-child {
@@ -277,8 +281,8 @@ table {
     padding: 20px 10px 20px 10px;
     text-align: center;
     overflow: auto;
-    -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
   }
   .menu__list.active {
     left: 0;
@@ -302,8 +306,8 @@ table {
   left: 0;
   -webkit-transform: scale(0);
           transform: scale(0);
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .menu__link:hover::after {
@@ -350,6 +354,7 @@ table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-width: 295px;
 }
 
 .social {
@@ -401,7 +406,7 @@ table {
 .title__top {
   max-width: 316px;
   text-transform: uppercase;
-  color: #FBD784;
+  color: #fbd784;
   font-weight: 500;
   font-size: 1.1rem;
   letter-spacing: 6px;
@@ -419,7 +424,7 @@ table {
   content: "";
   width: 72px;
   height: 2px;
-  background: #FBD784;
+  background: #fbd784;
   position: absolute;
   top: -15px;
   left: 0px;
@@ -457,7 +462,7 @@ table {
 }
 
 .title__bot::after {
-  content: '';
+  content: "";
   background: url("../img/arrow.svg") no-repeat;
   position: absolute;
   width: 16px;
@@ -566,7 +571,7 @@ table {
   font-weight: 500;
   font-size: 2.2rem;
   line-height: 40px;
-  color: #FFFFFF;
+  color: #ffffff;
   position: relative;
 }
 
@@ -577,15 +582,15 @@ table {
 }
 
 .info__title-s2::before {
-  content: '01';
+  content: "01";
 }
 
 .info__title-s3::before {
-  content: '02';
+  content: "02";
 }
 
 .info__title-s4::before {
-  content: '03';
+  content: "03";
 }
 
 .info__title::before {
@@ -594,7 +599,7 @@ table {
   position: absolute;
   top: -50px;
   left: -100px;
-  opacity: .2;
+  opacity: 0.2;
 }
 
 @media (max-width: 992.98px) {
@@ -608,7 +613,7 @@ table {
 .info__text {
   font-size: 1.1rem;
   line-height: 32px;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 27px;
 }
 
@@ -622,7 +627,7 @@ table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #FBD784;
+  color: #fbd784;
   position: relative;
   text-decoration: none;
   position: relative;
@@ -669,7 +674,7 @@ table {
       -ms-flex-align: center;
           align-items: center;
   padding-bottom: 60px;
-  background: #0B1D26;
+  background: #0b1d26;
 }
 
 @media (max-width: 767.98px) {
@@ -767,7 +772,7 @@ table {
 }
 
 .footer__list-title {
-  color: #FBD784;
+  color: #fbd784;
 }
 
 .footer__list {
@@ -813,8 +818,8 @@ table {
   left: 0;
   -webkit-transform: scale(0);
           transform: scale(0);
-  -webkit-transition: all .3s ease;
-  transition: all .3s ease;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .footer__link:hover::after {
