--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,20 +4,24 @@
 @import "content";
 @import "footer";
 
-.s1, .s2, .s3, .s4 {
+.s1,
+.s2,
+.s3,
+.s4 {
   width: 100%;
   height: 100vh;
-  background: url('../img/bg_hero.webp') no-repeat;
+  background: url("../img/bg_hero.webp") no-repeat;
   background-size: cover;
   position: relative;
 }
 
 .s2 {
-  background: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0B1D26 61.38%);;
+  background: linear-gradient(180deg, rgba(11, 29, 38, 0) 0%, #0b1d26 61.38%);
 }
 
-.s3, .s4 {
-  background: #0B1D26;
+.s3,
+.s4 {
+  background: #0b1d26;
 }
 
 .hg {
@@ -26,9 +30,9 @@
   position: absolute;
   top: -20%;
   left: 0;
-  background: url('../img/hg.webp') no-repeat;
+  background: url("../img/hg.webp") no-repeat;
   background-size: cover;
-  opacity: .4;
+  opacity: 0.4;
 }
 
 .mg {
@@ -37,7 +41,7 @@
   position: absolute;
   top: 50%;
   left: 0;
-  background: url('../img/mg.webp') no-repeat;
+  background: url("../img/mg.webp") no-repeat;
   background-size: cover;
   opacity: 1;
 }
@@ -48,7 +52,7 @@
   position: absolute;
   top: 70%;
   left: 0;
-  background: url('../img/vg.webp') no-repeat;
+  background: url("../img/vg.webp") no-repeat;
   background-size: cover;
   opacity: 1;
 }
@@ -73,7 +77,6 @@
   }
 }
 .menu {
-
   &__icon {
     display: none;
     width: 30px;
@@ -88,8 +91,8 @@
       width: 100%;
       height: 2px;
       background-color: white;
-      transition: all .3s ease-in-out;
-      
+      transition: all 0.3s ease-in-out;
+
       &:first-child {
         top: 0px;
       }
@@ -118,7 +121,7 @@
       left: 10px;
     }
   }
-  
+
   &__list {
     display: flex;
     li {
@@ -146,12 +149,11 @@
       padding: 20px 10px 20px 10px;
       text-align: center;
       overflow: auto;
-      transition: all .3s ease;
+      transition: all 0.3s ease;
       &.active {
         left: 0;
       }
     }
-
   }
   &__link {
     font-size: 1.1rem;
@@ -167,7 +169,7 @@
       bottom: 0;
       left: 0;
       transform: scale(0);
-      transition: all .3s ease;
+      transition: all 0.3s ease;
     }
     &:hover {
       &::after {
@@ -200,6 +202,7 @@
   &__row {
     width: 100%;
     display: flex;
+    max-width: 295px;
   }
 }
 .social {
@@ -232,7 +235,7 @@
   &__top {
     max-width: 316px;
     text-transform: uppercase;
-    color: #FBD784;
+    color: #fbd784;
     font-weight: 500;
     font-size: 1.1rem;
     letter-spacing: 6px;
@@ -242,12 +245,12 @@
     @media (max-width: $md3+px) {
       font-size: 0.9rem;
     }
-    
+
     &::before {
       content: "";
       width: 72px;
       height: 2px;
-      background: #FBD784;
+      background: #fbd784;
       position: absolute;
       top: -15px;
       left: 0px;
@@ -281,7 +284,7 @@
     position: relative;
 
     &::after {
-      content: '';
+      content: "";
       background: url("../img/arrow.svg") no-repeat;
       position: absolute;
       width: 16px;
@@ -291,7 +294,6 @@
     }
   }
 }
-
 
 .block-wrapper {
   display: flex;
@@ -342,7 +344,7 @@
     &-s3 {
       max-width: 350px;
     }
-    
+
     &-s4 {
       max-width: 450px;
     }
@@ -353,7 +355,7 @@
     font-weight: 500;
     font-size: 2.2rem;
     line-height: 40px;
-    color: #FFFFFF;
+    color: #ffffff;
     position: relative;
 
     @media (max-width: $md3+px) {
@@ -362,17 +364,17 @@
 
     &-s2 {
       &::before {
-        content: '01';
+        content: "01";
       }
     }
     &-s3 {
       &::before {
-        content: '02';
+        content: "02";
       }
     }
     &-s4 {
       &::before {
-        content: '03';
+        content: "03";
       }
     }
 
@@ -382,7 +384,7 @@
       position: absolute;
       top: -50px;
       left: -100px;
-      opacity: .2;
+      opacity: 0.2;
 
       @media (max-width: $md2+px) {
         font-size: 6rem;
@@ -398,7 +400,7 @@
   &__text {
     font-size: 1.1rem;
     line-height: 32px;
-    color: #FFFFFF;
+    color: #ffffff;
     margin-bottom: 27px;
 
     @media (max-width: $md3+px) {
@@ -408,7 +410,7 @@
 
   &__bot {
     display: flex;
-    color: #FBD784;
+    color: #fbd784;
     position: relative;
     text-decoration: none;
     position: relative;
@@ -420,18 +422,18 @@
 .image {
   display: flex;
   flex-basis: 30%;
-  background: url('../img/01.webp') no-repeat;
+  background: url("../img/01.webp") no-repeat;
   background-size: contain;
   background-position: center center;
   padding-bottom: 40%;
 
   &-s3 {
-    background: url('../img/02.webp') no-repeat;
+    background: url("../img/02.webp") no-repeat;
     background-size: contain;
   }
 
   &-s4 {
-    background: url('../img/03.webp') no-repeat;
+    background: url("../img/03.webp") no-repeat;
     background-size: contain;
   }
 
@@ -444,7 +446,7 @@
   display: flex;
   align-items: center;
   padding-bottom: 60px;
-  background: #0B1D26;
+  background: #0b1d26;
 
   @media (max-width: $md3+px) {
     padding-bottom: 20px;
@@ -515,9 +517,8 @@
     opacity: 0.5;
   }
 
-
   &__list-title {
-    color: #FBD784;
+    color: #fbd784;
   }
 
   &__list {
@@ -556,7 +557,7 @@
       bottom: 0;
       left: 0;
       transform: scale(0);
-      transition: all .3s ease;
+      transition: all 0.3s ease;
     }
     &:hover {
       &::after {
