--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: Poppins; 
+  src: url("../fonts/Poppins-Medium.ttf") format("truetype"); 
+}
 /////////////////////////////////////////////////////////////////
 $minwidth: 320px;
 $mw: 1760px;
