--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1,6 +1,9 @@
 @font-face {
   font-family: Poppins; 
   src: url("../fonts/Poppins-Medium.ttf") format("truetype"); 
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 /////////////////////////////////////////////////////////////////
 $minwidth: 320px;
