--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,6 +142,7 @@
       height: 6%;
       top: 0;
       left: -110%;
+      z-index: 200;
       background-color: #fff;
       margin-left: 0px;
       color: #000000;
